--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -2,3 +2,13 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.viziwyg-app,
+.viziwyg-page {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+
+  background-color: #fbfbfb;
+}
