Post ng-material add commit

--- a/public/src/app/core/auth/login-page/login-page.component.html
+++ b/public/src/app/core/auth/login-page/login-page.component.html
@@ -1,7 +1,7 @@
 <div class="viziwyg-page login-page">
   <form class="login-form form">
 
-    <!-- <img src="assets/img/logo.svg"> -->
+    <img src="assets/img/logo2.svg" class="logo">
 
     <mat-form-field appearance="fill">
       <mat-label>Username</mat-label>
