--- a/public/src/app/core/auth/login-page/login-page.component.scss
+++ b/public/src/app/core/auth/login-page/login-page.component.scss
@@ -6,10 +6,15 @@
   form {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    padding: 100px;
+    width: 20%;
+    padding: 50px 100px;
     box-shadow: 5px 5px 10px -10px rgba(0,0,0,.5);
     background-color: white;
+
+    .logo {
+      width: 90px;
+      margin: 20px auto;
+    }
 
     .form-actions {
       display: flex;
