--- a/public/src/app/core/dashboards/components/dashboard/dashboard.component.html
+++ b/public/src/app/core/dashboards/components/dashboard/dashboard.component.html
@@ -8,6 +8,7 @@
     <div class="dashboard__body">
 
       <a mat-raised-button [routerLink]="['/dashboard/id', dashboard.uid, 'edit']">Edit</a>
+      <a mat-button [routerLink]="['/dashboard/manage']">Manage</a>
     </div>
   </div>
 
